[package]
name = "parse_arg"
version = "0.1.2"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Traits and implementations for parsing command-line arguments."
homepage = "https://github.com/Kixunil/parse_arg"
repository = "https://github.com/Kixunil/parse_arg"
readme = "README.md"
keywords = ["arguments", "parsing", "string", "osstring", "osstr"]
categories = ["command-line-interface", "parsing", "rust-patterns"]
license = "MITNFA"
maintenance = { status = "passively-maintained" }
