[package]
name = "parse_arg"
version = "0.1.6"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Traits and implementations for parsing command-line arguments."
repository = "https://github.com/Kixunil/parse_arg"
readme = "README.md"
keywords = ["arguments", "parsing", "string", "osstring", "osstr"]
categories = ["command-line-interface", "parsing", "rust-patterns"]
license = "MITNFA"

[badges]
maintenance = { status = "as-is" }

[dependencies]
parse_arg_1_0 = { package = "parse_arg", version = "1.0.0" }
