[package]
name = "parse_arg"
version = "1.0.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Traits and implementations for parsing command-line arguments."
repository = "https://github.com/Kixunil/parse_arg"
readme = "README.md"
keywords = ["arguments", "parsing", "string", "osstring", "osstr"]
categories = ["command-line-interface", "parsing", "rust-patterns"]
license = "MITNFA"
maintenance = { status = "as-is" }
rust-version = "1.63"
